--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+/* .ui.inverted.vertical.center.aligned.segment {
+  background-image: url(https://petsrus.com.au/uploads/images/_1500x1120_fit_center-center_70_none/pets-in-park-2.jpg);
+  background-size: cover;
+} */
