added navbar and navbar color

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,10 @@
   }
 }
 
+.ui.secondary.menu {
+  background-color: #06bcab!important;
+}
+
 /* .ui.inverted.vertical.center.aligned.segment {
   background-image: url(https://petsrus.com.au/uploads/images/_1500x1120_fit_center-center_70_none/pets-in-park-2.jpg);
   background-size: cover;
